--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,7 @@
   margin-left: 5%;
   width: 95%;
   animation-name: aparecer;
-  animation-duration: 4s;
+  animation-duration: 3s;
   animation-delay: 0s;
   animation-iteration-count: infinite; }
 
@@ -145,7 +145,7 @@
   margin-left: 45%;
   margin-bottom: 10%;
   animation-name: aparecer;
-  animation-duration: 4s;
+  animation-duration: 3s;
   animation-delay: 0s;
   animation-iteration-count: infinite; }
 
@@ -273,6 +273,12 @@
   .tarjeta2:hover {
     color: black;
     background-color: lightgray; }
+  .tarjeta2 h1 {
+    font-family: "Electrolize";
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 35px; }
   .tarjeta2 h3 {
     font-family: "Electrolize";
     display: flex;
