--- a/scss/2-Components-Body/_bodies.scss
+++ b/scss/2-Components-Body/_bodies.scss
@@ -5,6 +5,11 @@
     font-family: $font-primary;
     font-size: 3em;
     color: rgb(255, 255, 255);
+    transition: .3s ease all;    
+    
+        body.dark &{
+            color: black;
+        }
 }
 @mixin titulos-lista {
     font-family: $font-primary;
@@ -48,11 +53,17 @@ $grayscale: (
     border-radius: 10px;
     align-self: center;
     justify-self: center;
+    transition: .3s ease all;
+
+        body.dark &{
+            background-color: black;
+            color: white;
+        }
 }
 
 .ucards{
     grid-column: 2 / 3;
-    color: black;
+    color: white;
     background: map-get($grayscale, "4");
     padding: 50px 200px 50px 200px;
     border-radius: 15px;
@@ -67,9 +78,70 @@ $grayscale: (
 
 
 //INICIO==============================================================================================================================================================================================================
+
+.navy{    
+    transition: .3s ease all;
+        
+        body.dark &{
+        background: white !important;
+    }
+}
+
+.linky{
+    transition: .3s ease all;
+
+        body.dark &{
+        color: black !important;
+    }
+}
 .texto-bar{
     font-family: $font-secondary !important;
     font-size: $font-l;
+    transition: .3s ease all;
+
+        body.dark &{
+            color: black !important;
+        }
+}
+
+.onoff{
+    background: white;
+    border-radius: 1000px;
+    border: none;
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    outline: none;
+
+        &::after{
+            content: "";
+            display: block;
+            width: 30px;
+            height: 30px;
+            position: absolute;
+            background: rgb(83, 83, 83);
+            top: 0;
+            left: 0;
+            right: unset;
+            border-radius: 100px;
+            transition: .3s ease all;
+            box-shadow: 0 0 2px 2px rgba(0, 0, 0, .2);
+        }
+        &.active{
+            background: rgb(182, 182, 182);
+            &::after{
+                right: 0;
+                left: unset;
+            }
+        }
+        span{
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
+            display: block;
+            background: none;
+            color: black;
+        }
 }
 
 .tiulo-container{
@@ -90,7 +162,11 @@ $grayscale: (
     animation-name: aparecer;
     animation-duration: 3s;
     animation-delay: 0s;
-    animation-iteration-count: infinite;
+    animation-iteration-count: infinite;   
+
+    body.dark &{
+        color: black !important;
+    }
 }
 
 @keyframes aparecer{
@@ -110,6 +186,10 @@ $grayscale: (
     animation-duration: 3s;
     animation-delay: 0s;
     animation-iteration-count: infinite;
+
+    body.dark &{
+        color: black !important;
+    }
 }
 
 @keyframes aparecer{
@@ -133,19 +213,41 @@ $grayscale: (
 .nosotros__p{
     @include parrafos;
         a{
-            color: white !important;
+            color: white;
             font-style: italic;
             transition: color .8s;
-                &:hover{
-                    color: gold !important;
+
+                body.dark &{
+                    color: black !important;
+                    &:hover{
+                        color: gold !important;
+                    }
                 }
+            &:hover{
+                color: gold !important;
+            }
         }
+}
+
+.jumby{
+    transition: .3s ease all;
+    background-color: black;
+        
+        body.dark &{
+            background-color: white !important;
+            color: black !important;
+    }
 }
 
 #logo__container{
     grid-column: 2 / 3;
     grid-row: 3 / 5;
     margin-bottom: 30px;
+    transition: .3s ease all;
+
+        body.dark &{
+            background-color: black;
+        }
 }
 
 #logo__container :hover{
@@ -207,7 +309,12 @@ $grayscale: (
     grid-column: 1 / 2;
     font-family: $font-primary;
     font-size: 3em;
-    color: rgb(252, 252, 252);
+    color: rgb(252, 252, 252);    
+    transition: .3s ease all;
+
+        body.dark &{
+            color: black !important;
+        }
 }
 
 //EXTEND======================================================================
@@ -228,16 +335,27 @@ $grayscale: (
 .tarjeta1{
     @extend .ucards;
     grid-row: 3 / 4;
+    
+        body.dark &{
+            border-color: black;
+        }
         &:hover{
-            color: black;
             background-color: lightgray;
         }
             h1{
                 @include titulos-lista;
+                    
+                body.dark &{
+                    color: black;
+                }
             }
                 ul{
                     li{
                         @include list-item;
+
+                        body.dark &{
+                            color: black;
+                        }
                     }
                 }
 }
@@ -259,17 +377,28 @@ $grayscale: (
 .tarjeta2{
     @extend .ucards;
     grid-row: 7 / 8;
+    
+    body.dark &{
+        border-color: black;
+    }
         &:hover{
-            color: black;
             background-color: lightgray;
         }
             h1{
                 @include titulos-lista;
+                    
+                    body.dark &{
+                    color: black;
+                    }
             }
             
                 ul{
                     li{
                         @include list-item;
+
+                            body.dark &{
+                            color: black;
+                            }
                     }
                 }
 
@@ -358,4 +487,18 @@ $grayscale: (
 .google-maps{
     transform: translateY(-25%);
     margin-left: 50%;
+}
+
+#other{
+    color: black;
+    background-color: white;
+    font-family: $font-secondary;
+    font-size: $font-l;
+
+    &:hover{
+        background-color: black;
+        color: white;
+        border-style: solid;
+        border-color: white;
+    }
 }
