--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,6 +18,11 @@
 
 body{
     background-color: black;
+    transition: .3s ease all;
+
+        &.dark{
+            background-color: white;
+        }
 }
 
 /*------------------------------------------------------------------------------INICIO-----------------------------------*/
