--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,12 @@ body{
         }
 }
 
+#particles-js{
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: -10;
+}
 /*------------------------------------------------------------------------------INICIO-----------------------------------*/
 @media screen and ( max-width: 412px){
 
