--- a/scss/style.scss
+++ b/scss/style.scss
@@ -335,7 +335,7 @@ body{
 
     #logo__container{
         transform: translateY(-5%);
-        margin-right: 26%;
+        padding-right: 26%;
     }
     
     #coderlogo{
