--- a/scss/2-Components-Body/_bodies.scss
+++ b/scss/2-Components-Body/_bodies.scss
@@ -79,6 +79,12 @@ $grayscale: (
 
 //INICIO==============================================================================================================================================================================================================
 
+.burger{
+    body.dark &{
+        background-color: rgb(83, 83, 83) !important;
+    }
+}
+
 .navy{    
     transition: .3s ease all;
         
